--- a/home/configs/waybar/style.css
+++ b/home/configs/waybar/style.css
@@ -1,9 +1,3 @@
-/*
-* The colorsheme inspired by catppuccin-latte and used colors from its
-* palette.
-*/
-@import "catppuccin-latte.css";
-
 * {
   min-height: 0;
   padding: 0;
@@ -15,7 +9,7 @@
 
 .modules-left,
 .modules-right {
-  background-color: @background;
+  background-color: @surface0;
 }
 
 .modules-left {
@@ -56,7 +50,7 @@ window#waybar {
 }
 
 #cpu {
-  color: @orange;
+  color: @yellow;
 }
 
 #memory {
@@ -76,7 +70,7 @@ window#waybar {
 }
 
 #workspaces {
-  background-color: @background;
+  background-color: @surface0;
   margin-bottom: 5px;
   border-radius: 0 0 3px 3px;
 }
@@ -134,7 +128,7 @@ window#waybar {
 }
 
 #battery.urgent {
-  color: @orange;
+  color: @yellow;
 }
 
 #battery.critical {
