QoL update, more in description
- Removed Dolphin
- Removed fim
- Added Nemo
- Added Loupe
- Added Zathura (PDF-viewer with hot-reloading)
- Added fixation of XDG mime types and corresponting desktop files
- Enabled Tray of waybar (looks badly, but I hope it will look better)
- Added mpv configuration (now looks much better)
- Added niri's window-rule for mpv (open on fullscreen mode)

--- a/home/configs/waybar/style.css
+++ b/home/configs/waybar/style.css
@@ -115,6 +115,10 @@ window#waybar {
   color: #aab1d3;
 }
 
+#tray {
+  padding: 0 5px;
+}
+
 #pulseaudio {
   margin-top: 5px;
   margin-bottom: 5px;
