Fix tray icons in waybar

--- a/home/configs/waybar/style.css
+++ b/home/configs/waybar/style.css
@@ -116,7 +116,15 @@ window#waybar {
 }
 
 #tray {
-  padding: 0 5px;
+  padding: 0 10px;
+}
+
+#tray > .passive {
+    -gtk-icon-effect: dim;
+}
+
+#tray > .needs-attention {
+    -gtk-icon-effect: highlight;
 }
 
 #pulseaudio {
